# LeslieLEDs

./: .gitignore  ARCHITECTURE_DIAGRAM.md  DMX_MULTI_FIXTURE.md  LEDENGINE_QUICK_REFERENCE.md  MIDI_MAPPING.md  MIDI_USER_GUIDE.md  MULTI_PLATFORM_SUMMARY.md  PROJECT_SPLIT_SUMMARY.md  README.md  SETUP_CHECKLIST.md  SHARED_LIBRARY_INTEGRATION.md  SPLIT_ARCHITECTURE.md  platformio.ini
DMXnow2Strip/: README.md  platformio.ini
DMXnow2Strip/include/: config.h
DMXnow2Strip/src/: dmx_to_ledengine.cpp  dmx_to_ledengine.h  main.cpp
LEDengine/: README.md  library.json
LEDengine/src/: LedEngine.cpp  LedEngine.h  libstrip.cpp  libstrip.h
Midi2DMXnow/: README.md  platformio.ini
Midi2DMXnow/include/: config.h
Midi2DMXnow/src/: display_handler.cpp  display_handler.h  dmx_state.cpp  dmx_state.h  led_preview_renderer.cpp  led_preview_renderer.h  main.cpp  midi_handler.cpp  midi_handler.h  midi_processor.cpp  midi_processor.h  serial_midi_handler.cpp  serial_midi_handler.h
Midi2Strip/controller/: requirements.txt
Midi2Strip/src/: midi_handler.h
_legacy/Midi2Strip/: README.md  platformio.ini
_legacy/Midi2Strip/src/: display_handler.h  led_controller.h  serial_midi_handler.cpp
_legacy/Midi2Strip/test/: test_leds.cpp
controller/: controller.py  pyproject.toml  run.sh
include/: config.h
shared_libs/ESPNowDMX/src/: ESPNowDMX_Common.h  ESPNowDMX_Receiver.cpp  (+4 more)
src/: display_handler.cpp  display_handler.h  dmx_handler.cpp  dmx_handler.h  led_controller.cpp  led_controller.h  main.cpp  midi_handler.cpp  serial_midi_handler.h
test/: test_leds.cpp  test_leds_m5core.cpp
